--- a/Jupyter lab tester.ipynb
+++ b/Jupyter lab tester.ipynb
@@ -24,6 +24,16 @@
    "id": "cdb292b5-5106-4451-9c8b-a48d46409b3c",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "print(\"Hi!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4982e23",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
