--- a/Jupyter lab tester.ipynb
+++ b/Jupyter lab tester.ipynb
@@ -38,6 +38,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
